test/org/midica/testfiles/failing/param-n-assign-unknown-name.midica
INCLUDE inc/instruments.midica

CALL test(x=z)

FUNCTION test
	VAR ${y} = b
	0  c  /4  l=${y}
END